[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysigrok-libsigrokdecode"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
authors = [{name = "Scott Shawcroft", email = "scott@tannewt.org"}]
dynamic = ["version", "description"]
dependencies = [
    "pysigrok",
]

[project.urls]
Home = "https://github.com/pysigrok/libsigrokdecode"

[tool.flit.module]
name = "decoders"

[project.entry-points."pysigrok.decoders"]
ac97 = "decoders.ac97:Decoder"
ad5626 = "decoders.ad5626:Decoder"
ad79x0 = "decoders.ad79x0:Decoder"
ade77xx = "decoders.ade77xx:Decoder"
adf435x = "decoders.adf435x:Decoder"
adns5020 = "decoders.adns5020:Decoder"
adxl345 = "decoders.adxl345:Decoder"
am230x = "decoders.am230x:Decoder"
amulet_ascii = "decoders.amulet_ascii:Decoder"
arm_etmv3 = "decoders.arm_etmv3:Decoder"
arm_itm = "decoders.arm_itm:Decoder"
arm_tpiu = "decoders.arm_tpiu:Decoder"
atsha204a = "decoders.atsha204a:Decoder"
aud = "decoders.aud:Decoder"
avr_isp = "decoders.avr_isp:Decoder"
avr_pdi = "decoders.avr_pdi:Decoder"
caliper = "decoders.caliper:Decoder"
can = "decoders.can:Decoder"
cc1101 = "decoders.cc1101:Decoder"
cec = "decoders.cec:Decoder"
cfp = "decoders.cfp:Decoder"
cjtag = "decoders.cjtag:Decoder"
counter = "decoders.counter:Decoder"
dali = "decoders.dali:Decoder"
dcf77 = "decoders.dcf77:Decoder"
dmx512 = "decoders.dmx512:Decoder"
ds1307 = "decoders.ds1307:Decoder"
ds2408 = "decoders.ds2408:Decoder"
ds243x = "decoders.ds243x:Decoder"
ds28ea00 = "decoders.ds28ea00:Decoder"
dsi = "decoders.dsi:Decoder"
edid = "decoders.edid:Decoder"
eeprom24xx = "decoders.eeprom24xx:Decoder"
eeprom93xx = "decoders.eeprom93xx:Decoder"
em4100 = "decoders.em4100:Decoder"
em4305 = "decoders.em4305:Decoder"
enc28j60 = "decoders.enc28j60:Decoder"
flexray = "decoders.flexray:Decoder"
graycode = "decoders.graycode:Decoder"
guess_bitrate = "decoders.guess_bitrate:Decoder"
hdcp = "decoders.hdcp:Decoder"
i2c = "decoders.i2c:Decoder"
i2cdemux = "decoders.i2cdemux:Decoder"
i2cfilter = "decoders.i2cfilter:Decoder"
i2s = "decoders.i2s:Decoder"
ieee488 = "decoders.ieee488:Decoder"
ir_irmp = "decoders.ir_irmp:Decoder"
ir_nec = "decoders.ir_nec:Decoder"
ir_rc5 = "decoders.ir_rc5:Decoder"
ir_rc6 = "decoders.ir_rc6:Decoder"
ir_sirc = "decoders.ir_sirc:Decoder"
jitter = "decoders.jitter:Decoder"
jtag = "decoders.jtag:Decoder"
jtag_ejtag = "decoders.jtag_ejtag:Decoder"
jtag_stm32 = "decoders.jtag_stm32:Decoder"
lfast = "decoders.lfast:Decoder"
lin = "decoders.lin:Decoder"
lm75 = "decoders.lm75:Decoder"
lpc = "decoders.lpc:Decoder"
ltc242x = "decoders.ltc242x:Decoder"
ltc26x7 = "decoders.ltc26x7:Decoder"
maple_bus = "decoders.maple_bus:Decoder"
max7219 = "decoders.max7219:Decoder"
mcs48 = "decoders.mcs48:Decoder"
mdio = "decoders.mdio:Decoder"
microwire = "decoders.microwire:Decoder"
midi = "decoders.midi:Decoder"
miller = "decoders.miller:Decoder"
mlx90614 = "decoders.mlx90614:Decoder"
modbus = "decoders.modbus:Decoder"
morse = "decoders.morse:Decoder"
mrf24j40 = "decoders.mrf24j40:Decoder"
mxc6225xu = "decoders.mxc6225xu:Decoder"
nes_gamepad = "decoders.nes_gamepad:Decoder"
nrf24l01 = "decoders.nrf24l01:Decoder"
nrf905 = "decoders.nrf905:Decoder"
numbers_and_state = "decoders.numbers_and_state:Decoder"
nunchuk = "decoders.nunchuk:Decoder"
onewire_link = "decoders.onewire_link:Decoder"
onewire_network = "decoders.onewire_network:Decoder"
ook = "decoders.ook:Decoder"
ook_oregon = "decoders.ook_oregon:Decoder"
ook_vis = "decoders.ook_vis:Decoder"
pan1321 = "decoders.pan1321:Decoder"
parallel = "decoders.parallel:Decoder"
pca9571 = "decoders.pca9571:Decoder"
pjdl = "decoders.pjdl:Decoder"
pjon = "decoders.pjon:Decoder"
ps2 = "decoders.ps2:Decoder"
pwm = "decoders.pwm:Decoder"
qi = "decoders.qi:Decoder"
rc_encode = "decoders.rc_encode:Decoder"
rfm12 = "decoders.rfm12:Decoder"
rgb_led_spi = "decoders.rgb_led_spi:Decoder"
rgb_led_ws281x = "decoders.rgb_led_ws281x:Decoder"
rtc8564 = "decoders.rtc8564:Decoder"
sae_j1850_vpw = "decoders.sae_j1850_vpw:Decoder"
sbus_futaba = "decoders.sbus_futaba:Decoder"
sda2506 = "decoders.sda2506:Decoder"
sdcard_sd = "decoders.sdcard_sd:Decoder"
sdcard_spi = "decoders.sdcard_spi:Decoder"
sdq = "decoders.sdq:Decoder"
seven_segment = "decoders.seven_segment:Decoder"
signature = "decoders.signature:Decoder"
sipi = "decoders.sipi:Decoder"
sle44xx = "decoders.sle44xx:Decoder"
spdif = "decoders.spdif:Decoder"
spi = "decoders.spi:Decoder"
spiflash = "decoders.spiflash:Decoder"
ssi32 = "decoders.ssi32:Decoder"
st25r39xx_spi = "decoders.st25r39xx_spi:Decoder"
st7735 = "decoders.st7735:Decoder"
stepper_motor = "decoders.stepper_motor:Decoder"
swd = "decoders.swd:Decoder"
swim = "decoders.swim:Decoder"
t55xx = "decoders.t55xx:Decoder"
tca6408a = "decoders.tca6408a:Decoder"
tdm_audio = "decoders.tdm_audio:Decoder"
timing = "decoders.timing:Decoder"
tlc5620 = "decoders.tlc5620:Decoder"
uart = "decoders.uart:Decoder"
usb_packet = "decoders.usb_packet:Decoder"
usb_power_delivery = "decoders.usb_power_delivery:Decoder"
usb_request = "decoders.usb_request:Decoder"
usb_signalling = "decoders.usb_signalling:Decoder"
wiegand = "decoders.wiegand:Decoder"
x2444m = "decoders.x2444m:Decoder"
xfp = "decoders.xfp:Decoder"
xy2_100 = "decoders.xy2_100:Decoder"
z80 = "decoders.z80:Decoder"
